--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Pacifico&family=Rubik+Bubbles&display=swap" rel="stylesheet">
     <title>Maze Game</title>
 </head>
 <body>
     <h1>Maze Game</h1>
+    <h2>Press the arrow buttons to move around, find the dock to finish the game.</h2>
     <canvas></canvas>
     <script src="index.js"></script>
 </body>
