--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Maze Game</h1>
     <h2>Press the arrow buttons to move around, find the dock reach the exit.</h2>
     <canvas></canvas>
+    <script src="assets/collisions.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
