boundaries and collisions nearly done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Maze Game</h1>
-    <h2>Press the arrow buttons to move around, find the dock reach the exit.</h2>
+    <h2>Press the arrow buttons to move around, find the dock to reach the exit.</h2>
     <canvas></canvas>
     <script src="assets/collisions.js"></script>
     <script src="index.js"></script>
