setting up exitZone for game end

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>Maze Game</h1>
     <h2>Press the arrow buttons to move around, find the dock to reach the exit.</h2>
     <canvas></canvas>
+    <h4>Hint - the characters head is quite large and might get in the way of some spaces</h4>
+    <script src="assets/ExitZones.js"></script>
     <script src="assets/collisions.js"></script>
     <script src="index.js"></script>
 </body>
