--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <h1>Maze Game</h1>
     <h2>Press the arrow buttons to move around, find the dock to reach the exit.</h2>
-    <canvas></canvas>
+    <div class="main">
+        <div class="cut-scene"></div>
+        <canvas></canvas>
+    </div>
+    
     <h4>Hint - the characters head is quite large and might get in the way of some spaces</h4>
     <script src="assets/ExitZones.js"></script>
     <script src="assets/collisions.js"></script>
